# src/main/kotlin/com/fictadvisor/pryomka/api/dto/faculty/AllDetailedSpecialitiesDto.kt
@@ -1,0 +1,6 @@
+package com.fictadvisor.pryomka.api.dto.faculty
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class AllDetailedSpecialitiesDto(val specialities: List<SpecialityDetailedDto>)
