# src/main/kotlin/com/fictadvisor/pryomka/api/dto/faculty/AllLearningFormatsDto.kt
@@ -1,0 +1,6 @@
+package com.fictadvisor.pryomka.api.dto.faculty
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class AllLearningFormatsDto(val formats: List<LearningFormatDto>)
