# src/main/kotlin/com/fictadvisor/pryomka/api/dto/faculty/CreateLearningFormatDto.kt
@@ -1,0 +1,6 @@
+package com.fictadvisor.pryomka.api.dto.faculty
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class CreateLearningFormatDto(val name: String)
