# src/main/kotlin/com/fictadvisor/pryomka/api/dto/faculty/LearningFormatDto.kt
@@ -1,0 +1,9 @@
+package com.fictadvisor.pryomka.api.dto.faculty
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class LearningFormatDto(
+    val id: String,
+    val name: String,
+)
