# src/main/kotlin/com/fictadvisor/pryomka/api/dto/faculty/SpecialityDto.kt
@@ -1,0 +1,9 @@
+package com.fictadvisor.pryomka.api.dto.faculty
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class SpecialityDto(
+    val code: Int,
+    val name: String,
+)
