# src/main/kotlin/com/fictadvisor/pryomka/api/dto/faculty/SpecialityLearningFormatsDto.kt
@@ -1,0 +1,10 @@
+package com.fictadvisor.pryomka.api.dto.faculty
+
+import kotlinx.serialization.SerialName
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class SpecialityLearningFormatsDto(
+    @SerialName("learning_formats")
+    val learningFormats: List<String>,
+)
