# src/main/kotlin/com/fictadvisor/pryomka/api/mappers/mappers.kt
@@ -1,17 +1,22 @@
 package com.fictadvisor.pryomka.api.mappers
 
 import com.fictadvisor.pryomka.api.dto.*
+import com.fictadvisor.pryomka.api.dto.faculty.LearningFormatDto
+import com.fictadvisor.pryomka.api.dto.faculty.SpecialityDetailedDto
+import com.fictadvisor.pryomka.api.dto.faculty.SpecialityDto
 import com.fictadvisor.pryomka.domain.models.*
+import com.fictadvisor.pryomka.domain.models.faculty.LearningFormat
+import com.fictadvisor.pryomka.domain.models.faculty.Speciality
 import kotlinx.datetime.Clock
 
 fun Application.toDto() = ApplicationResponseDto(
     id = id.value.toString(),
     status = status,
     documents = documents,
-    speciality = speciality,
+    speciality = speciality.toDto(),
     funding = funding,
     createdAt = createdAt,
-    learningFormat = learningFormat,
+    learningFormat = learningFormat.toDto(),
     statusMessage = statusMessage,
 )
 
@@ -19,9 +24,9 @@ fun ApplicationRequestDto.toDomain(userId: UserIdentifier) = Application(
     id = generateApplicationId(),
     userId = userId,
     documents = setOf(),
-    speciality = speciality,
+    speciality = speciality.toDomain(),
     funding = funding,
-    learningFormat = learningFormat,
+    learningFormat = learningFormat.toDomain(),
     createdAt = Clock.System.now(),
     status = Application.Status.Preparing,
 )
@@ -56,4 +61,27 @@ fun TelegramDataDto.toTelegramData() = TelegramData(
     photoUrl,
     userName,
     hash,
+)
+
+fun SpecialityDto.toDomain() = Speciality(code, name)
+
+fun LearningFormatDto.toDomain() = LearningFormat(
+    id.toLearningFormatIdentifier(),
+    name,
+)
+
+fun Speciality.toDto() = SpecialityDto(
+    code = code,
+    name = name,
+)
+
+fun Speciality.toDetailedDto(learningFormats: List<LearningFormat>) = SpecialityDetailedDto(
+    code = code,
+    name = name,
+    learningFormats = learningFormats.map { it.toDto() }
+)
+
+fun LearningFormat.toDto() = LearningFormatDto(
+    id = id.value.toString(),
+    name = name,
 )
